Contact Page horizontal scroll bug removed

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -401,4 +401,8 @@ input {
 }
 
 
+.scro{
+  overflow-x: hidden;
+}
+
 
